# rust-npm

./: Cargo.toml  LICENSE  README.md  config.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
action/: index.js  index.ts
npm/: package.json.tmpl
npm/app/: index.js  package.json
scripts/: bump-version.js  bump.js  setup.js  update-config.js
src/: main.rs
